--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@prismicio/client": "^6.0.0",
@@ -23,11 +24,20 @@
     "stripe": "^8.195.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^9.3.1",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@types/jest": "^26.0.21",
     "@types/node": "^17.0.8",
     "@types/prismic-dom": "^2.1.1",
     "@types/react": "^17.0.38",
+    "babel-jest": "^29.6.4",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "29.6.4",
+    "jest-environment-jsdom": "^29.6.4",
+    "ts-jest": "^27.1.1",
     "typescript": "^4.5.4"
   }
 }
